bitnami/git/git-with-actions/kpt/statefulset.yaml
---
# Source: git/charts/gitea/templates/gitea/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: git
  annotations:
  labels:
    app: git
    app.kubernetes.io/name: git
    app.kubernetes.io/instance: git
    app.kubernetes.io/version: "latest"
    version: "latest"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: git
      app.kubernetes.io/instance: git
  serviceName: git
  template:
    metadata:
      annotations:
        checksum/config: b8212f242222b656f12c5fea77ff9b89652fa168c79333b113dcf3cdb0125b71
      labels:
        app: git
        app.kubernetes.io/name: git
        app.kubernetes.io/instance: git
        app.kubernetes.io/version: "latest"
        version: "latest"
    spec:
      
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 60
      containers:
        - name: git-pod
          image: "gothenburg/gitea:latest"
          imagePullPolicy: Always
          ports:
            - name: ssh
              containerPort: 22
            - name: http
              containerPort: 3000
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 200
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          resources:
            {}
          securityContext:
            {}
          volumeMounts:
            - name: temp
              mountPath: /tmp
            - name: data
              mountPath: /data
            
      volumes:
        - name: init
          secret:
            secretName: git-init
            defaultMode: 110
        - name: config
          secret:
            secretName: git
            defaultMode: 110
        - name: inline-config-sources
          secret:
            secretName: git-inline-config
        - name: temp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
            - "ReadWriteOnce"        
        resources:
          requests:
            storage: "10Gi"
