bitnami/git/git-with-actions/kpt/http-svc.yaml
---
# Source: git/charts/gitea/templates/gitea/http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-http
  annotations:
    io.cilium.service/lb-l7: enabled
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app.kubernetes.io/name: git
    app.kubernetes.io/instance: git
