bitnami/git/git-with-actions/kpt/ssh-svc.yaml
---
# Source: git/charts/gitea/templates/gitea/ssh-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-gitea-ssh
  labels:
    app: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: git
    app.kubernetes.io/version: "latest"
    version: "latest"
  annotations:
    {}
spec:
  type: NodePort
  ports:
  - name: ssh
    port: 22
    nodePort: 22
    protocol: TCP
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: git
