bitnami/git/git-with-actions/kpt/ingress.yaml
# Source: git-main/charts/gitea/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git
  namespace: "git"
  labels:
    cert-promoter: ready
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production" # {"$kpt-set":"cert-issuer"}
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "cilium"
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
  - host: "git.local.ertia.cloud" # {"$kpt-set":"git-domain"}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: git-gitea-http
            port:
              number: 3000
  tls:
  - hosts:
    - "git.local.ertia.cloud" # {"$kpt-set":"git-domain"}
    secretName: gitea.local-tls
